--- a/medusa.html
+++ b/medusa.html
@@ -57,7 +57,8 @@
 <div class="container mt-4">
     <div class="jumbotron">
     <p class="lead" style="text-align: justify;">
-       
+        Medusa es una figura de la mitología griega, famosa por su cabello de serpientes y su capacidad de convertir en piedra a quien la mirara directamente a los ojos. Era una de las tres Gorgonas, hijas de Forcis y Ceto, y la única mortal entre ellas.
+    </p>
     <hr class="my-4">
     <div class="row">
     <div class="col-md-5">
